Updateee index.html

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                   <table>
                     <tr>
                         <td><a href="pagina01.html"><button>Nutrição/Receitas</button></a></td>
-                        <td><a href="pagina02.html"><button>Exercicios</button></a></td>
-                        <td><a href="pagina03.html"><button>Bem-estar mental</button></a></td>
-                        <td><a href="pagina05.html"><button>Cuidado com a Pele</button></a></td>
+                        <td><a href="pagina02.html"><button>Exercícios</button></a></td>
+                        <td><a href="pagina03.html"><button>Bem-estar Mental</button></a></td>
+                        <td><a href="pagina05.html"><button>Cuidados com a Pele</button></a></td>
                         
 
                     </tr>
