Updateee pagina02.html

--- a/pagina02.html
+++ b/pagina02.html
@@ -1,31 +1,80 @@
 <!DOCTYPE html>
-    <html>
-        <head>
-            <meta charset="UTF-8">
-            <title>Document</title>
-        </head>
-            <body>
-             <!--conteudo -->
-             <div id="cabecalho">
-                EXERCICIOS:
-            </div>
+<html>
 
-            <div id= "menu">
-                nav (MENU)
-            </div>
+<head>
+    <meta charset="UTF -8" />
+    <title>Document</title>
 
-            <div id="conteudo">
-                main (CONTEUDO DO SITE)
-            </div>
+    <link rel="stylesheet" type="text/css" href="styles02.css" media="screen" />
 
-            <div id="lado">
-                aside (BLOCOS LATERAIS)
-            </div>
+</head>
 
-            <div id="rodape">
-                footer (RODAPÉ) 
-            </div>
+<body>
+
+    <div id="cabecalho">
+        <br>
+        <h1>EXERCÍCIOS</h1>
+    </div>
+
+    <div id="menu">
+        <td><a href="index.html"><button>Voltar</button></a></td>
+    </div>
+
+    <div id="conteudo">
+        <h2>Você já pensou em Práticar Exercícios?</h2>
+        <h3>
+            Existem diversos tipos de exercícios físicos, e cada um deles oferece benefícios específicos para a saúde. Desde atividades aeróbicas, como corrida, natação e dança, 
+            que melhoram a capacidade cardiovascular, até exercícios de resistência, como musculação e pilates, que fortalecem os músculos e ossos, a variedade de opções permite 
+            que cada pessoa encontre uma prática que se adeque às suas preferências e necessidades.
+            <br>
+            <br>
+            Além disso, a prática de esportes coletivos ou individuais também proporciona uma série de benefícios para a saúde. 
+            O trabalho em equipe, a melhoria da coordenação motora e o estímulo à superação de desafios são apenas alguns dos aspectos positivos associados à prática esportiva.
+            <br>
+            <br>
+            Em termos gerais, a importância dos exercícios físicos e práticas esportivas para beneficiar a saúde é incontestável. Além dos benefícios já mencionados, 
+            a atividade física contribui para a manutenção do peso corporal saudável, o fortalecimento do sistema imunológico, a redução do risco de doenças crônicas 
+            (como diabetes e hipertensão) e o aumento da longevidade.
+    </div>
+
+    <div id="lado">
+        <td><img src="https://s2.glbimg.com/sYUw-_ztMdpbLyV9lCpms08KRw4=/620x390/top/s.glbimg.com/es/ge/f/original/2014/05/08/152605708.jpg"
+                width="230" height="230 alt=" Texto alternativo" title="imagem" /></td>
+        <td><img src="https://s2.glbimg.com/sYUw-_ztMdpbLyV9lCpms08KRw4=/620x390/top/s.glbimg.com/es/ge/f/original/2014/05/08/152605708.jpg"
+                width="230" height="230 alt=" Texto alternativo" title="imagem" /></td>
+        <br>
+        <td><img src="https://s2.glbimg.com/sYUw-_ztMdpbLyV9lCpms08KRw4=/620x390/top/s.glbimg.com/es/ge/f/original/2014/05/08/152605708.jpg"
+                width="230" height="230 alt=" Texto alternativo" title="imagem" /></td>
+        <td><img src="https://s2.glbimg.com/sYUw-_ztMdpbLyV9lCpms08KRw4=/620x390/top/s.glbimg.com/es/ge/f/original/2014/05/08/152605708.jpg"
+                width="230" height="230 alt=" Texto alternativo" title="imagem" /></td>
+    </div>
 
 
-            </body>
-    </html>
+
+
+    <div id="centro">
+        <table>
+            <tr>
+                <td><a href="index01.html"><button>Nutrição/Receitas</button></a></td>
+                <td><a href="index03.html"><button>Bem-estar Mental</button></a></td>
+                <td><a href="index04.html"><button>Cuidados com a Pele</button></a></td>
+
+
+            </tr>
+            <tr>
+                <td><img src="volei.jpg" width="200" height="200 alt=" Texto alternativo" title="imagem" /></td>
+                <td> <img src="meditação.jpg" width="200" height="200 alt=" Texto alternativo" title="imagem" /></td>
+                <td><img src="PELE.jpg" width="200" height="200 alt=" Texto alternativo" title="imagem" /></td>
+            </tr>
+        </table>
+    </div>
+
+    <div id="rodape">
+        <p>Telefone:(77) 9234-8761 | Email:saudesaudavel@gmail.com
+        <p></p>
+    </div>
+
+
+</body>
+
+</html>
