Updateee pagina03.html

--- a/pagina03.html
+++ b/pagina03.html
@@ -1,31 +1,81 @@
 <!DOCTYPE html>
-    <html>
-        <head>
-            <meta charset="UTF-8">
-            <title>Document</title>
-        </head>
-            <body>
-             <!--conteudo -->
-             <div id="cabecalho">
-                header (CABEÇALHO)
-            </div>
+<html>
 
-            <div id= "menu">
-                nav (MENU)
-            </div>
+<head>
+    <meta charset="UTF -8" />
+    <title>Document</title>
 
-            <div id="conteudo">
-                main (CONTEUDO DO SITE)
-            </div>
+    <link rel="stylesheet" type="text/css" href="styles03.css" media="screen" />
 
-            <div id="lado">
-                aside (BLOCOS LATERAIS)
-            </div>
+</head>
 
-            <div id="rodape">
-                footer (RODAPÉ) 
-            </div>
+<body>
+
+    <div id="cabecalho">
+        <br>
+        <h1>BEM-ESTAR MENTAL</h1>
+    </div>
+
+    <div id="menu">
+        <td><a href="index.html"><button>Voltar</button></a></td>
+    </div>
+
+    <div id="conteudo">
+        <h2>Já Reparou que Bem-Estar não é somente o Físico?</h2>
+        <h3>
+A expressão "mente sã, corpo são" ressalta a importância da conexão entre o bem-estar mental e a saúde física. Buscar o equilíbrio entre esses dois aspectos 
+é fundamental para uma vida plena e saudável.
+<br>
+Cuidar da saúde mental envolve atenção aos sentimentos, pensamentos e emoções, assim como a busca por estratégias que promovam o bem-estar psicológico. 
+Isso pode incluir a prática de mindfulness, meditação, terapia, hobbies relaxantes ou simplesmente dedicar tempo para atividades que tragam alegria e tranquilidade.
+<br>
+Por outro lado, manter o corpo são envolve a prática regular de exercícios físicos, uma alimentação equilibrada e a atenção à saúde física por meio de consultas médicas periódicas e exames preventivos.
+<br>
+A busca pelo bem-estar mental e da saúde não se resume apenas à ausência de doenças, mas sim à promoção de um estado geral de harmonia e vitalidade. 
+<br>
+Quando corpo e mente estão em equilíbrio, é possível lidar melhor com desafios do dia a dia, reduzir o estresse e viver com mais qualidade de vida.
+Portanto, é essencial dedicar atenção tanto à saúde mental quanto à saúde física, buscando formas de promover o equilíbrio entre mente sã e corpo são.
+        </h3>
+    </div>
+
+    <div id="lado">
+        <td><img src="https://s2.glbimg.com/sYUw-_ztMdpbLyV9lCpms08KRw4=/620x390/top/s.glbimg.com/es/ge/f/original/2014/05/08/152605708.jpg"
+                width="230" height="230 alt=" Texto alternativo" title="imagem" /></td>
+        <td><img src="https://s2.glbimg.com/sYUw-_ztMdpbLyV9lCpms08KRw4=/620x390/top/s.glbimg.com/es/ge/f/original/2014/05/08/152605708.jpg"
+                width="230" height="230 alt=" Texto alternativo" title="imagem" /></td>
+        <br>
+        <td><img src="https://s2.glbimg.com/sYUw-_ztMdpbLyV9lCpms08KRw4=/620x390/top/s.glbimg.com/es/ge/f/original/2014/05/08/152605708.jpg"
+                width="230" height="230 alt=" Texto alternativo" title="imagem" /></td>
+        <td><img src="https://s2.glbimg.com/sYUw-_ztMdpbLyV9lCpms08KRw4=/620x390/top/s.glbimg.com/es/ge/f/original/2014/05/08/152605708.jpg"
+                width="230" height="230 alt=" Texto alternativo" title="imagem" /></td>
+    </div>
 
 
-            </body>
-    </html>
+
+
+    <div id="centro">
+        <table>
+            <tr>
+                <td><a href="index01.html"><button>Nutrição/Receitas</button></a></td>
+                <td><a href="index02.html"><button>Exercícios</button></a></td>
+                <td><a href="index04.html"><button>Cuidados com a Pele</button></a></td>
+
+
+            </tr>
+            <tr>
+                <td><img src="volei.jpg" width="200" height="200 alt=" Texto alternativo" title="imagem" /></td>
+                <td> <img src="meditação.jpg" width="200" height="200 alt=" Texto alternativo" title="imagem" /></td>
+                <td><img src="PELE.jpg" width="200" height="200 alt=" Texto alternativo" title="imagem" /></td>
+            </tr>
+        </table>
+    </div>
+
+    <div id="rodape">
+        <p>Telefone:(77) 9234-8761 | Email:saudesaudavel@gmail.com
+        <p></p>
+    </div>
+
+
+</body>
+
+</html>
