Updateee pagina04.html

--- a/pagina04.html
+++ b/pagina04.html
@@ -1,12 +1,87 @@
 <!DOCTYPE html>
-    <html>
-        <head>
-            <meta charset="UTF-8">
-            <title>Document</title>
-        </head>
-            <body>
-             <!--conteudo -->
-             
+<html>
 
-            </body>
-    </html>
+<head>
+    <meta charset="UTF -8" />
+    <title>Document</title>
+
+    <link rel="stylesheet" type="text/css" href="styles04.css" media="screen" />
+
+</head>
+
+<body>
+
+    <div id="cabecalho">
+        <br>
+        <h1>CUIDADOS COM A PELE</h1>
+    </div>
+
+    <div id="menu">
+        <td><a href="index.html"><button>Voltar</button></a></td>
+    </div>
+
+    <div id="conteudo">
+        <h2>Cuidar da Pele vai Muito Além da Èstetica:</h2>
+        <h3>
+            Existem diversos tipos de cuidados com a pele que vão muito além da estética, impactando diretamente a saúde do corpo como um todo. A pele desempenha um papel 
+            crucial na proteção do organismo contra agentes externos, na regulação da temperatura corporal e na síntese de vitamina D, tornando essencial a manutenção de sua saúde.
+            <br>
+            <br>
+            Um dos principais cuidados é a limpeza diária da pele, que ajuda a remover impurezas, células mortas e resíduos que podem obstruir os poros e causar problemas 
+            dermatológicos. Além disso, a proteção solar é fundamental para prevenir danos causados pelos raios UV, como queimaduras, envelhecimento precoce e até mesmo câncer de pele.
+            <br>
+            <br>
+            A hidratação adequada também desempenha um papel crucial na saúde da pele, mantendo-a flexível, suave e protegida contra o ressecamento. 
+            Além disso, uma alimentação balanceada rica em vitaminas e minerais contribui para a saúde da pele, fornecendo os nutrientes necessários para sua manutenção.
+            <br>
+            <br>
+            Evitar hábitos prejudiciais como fumar e o consumo excessivo de álcool também é essencial para a saúde da pele, uma vez que esses comportamentos podem prejudicar sua estrutura e função.
+            <br>
+            <br>
+            Por fim, estar atento a quaisquer alterações na pele e buscar orientação médica quando necessário é crucial para identificar precocemente possíveis problemas 
+            dermatológicos e garantir a saúde da pele a longo prazo.
+            
+        </h3>
+    </div>
+
+    <div id="lado">
+        <td><img src="https://s2.glbimg.com/sYUw-_ztMdpbLyV9lCpms08KRw4=/620x390/top/s.glbimg.com/es/ge/f/original/2014/05/08/152605708.jpg"
+                width="230" height="230 alt=" Texto alternativo" title="imagem" /></td>
+        <td><img src="https://s2.glbimg.com/sYUw-_ztMdpbLyV9lCpms08KRw4=/620x390/top/s.glbimg.com/es/ge/f/original/2014/05/08/152605708.jpg"
+                width="230" height="230 alt=" Texto alternativo" title="imagem" /></td>
+        <br>
+        <td><img src="https://s2.glbimg.com/sYUw-_ztMdpbLyV9lCpms08KRw4=/620x390/top/s.glbimg.com/es/ge/f/original/2014/05/08/152605708.jpg"
+                width="230" height="230 alt=" Texto alternativo" title="imagem" /></td>
+        <td><img src="https://s2.glbimg.com/sYUw-_ztMdpbLyV9lCpms08KRw4=/620x390/top/s.glbimg.com/es/ge/f/original/2014/05/08/152605708.jpg"
+                width="230" height="230 alt=" Texto alternativo" title="imagem" /></td>
+    </div>
+
+
+
+
+    <div id="centro">
+        <table>
+            <tr>
+                <td><a href="index01.html"><button>Nutrição/Receitas</button></a></td>
+                <td><a href="index02.html"><button>Exercícios</button></a></td>
+                <td><a href="index03.html"><button>Bem-estar Mental</button></a></td>
+
+
+            </tr>
+            <tr>
+                <td><img src="volei.jpg" width="200" height="200 alt=" Texto alternativo" title="imagem" /></td>
+                <td> <img src="meditação.jpg" width="200" height="200 alt=" Texto alternativo" title="imagem" /></td>
+                <td><img src="PELE.jpg" width="200" height="200 alt=" Texto alternativo" title="imagem" /></td>
+            </tr>
+        </table>
+    </div>
+
+    <div id="rodape">
+        <p>Telefone:(77) 9234-8761 | Email:saudesaudavel@gmail.com
+        <p></p>
+    </div>
+
+
+</body>
+
+</html>
