--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                 <div id="centro">
                   <table>
                     <tr>
-                        <td><a href="pagina01.html"><button>Nutrição/Receitas</button></a></td>
-                        <td><a href="pagina02.html"><button>Exercícios</button></a></td>
-                        <td><a href="pagina03.html"><button>Bem-estar Mental</button></a></td>
-                        <td><a href="pagina05.html"><button>Cuidados com a Pele</button></a></td>
+                        <td><a href="index01.html"><button>Nutrição/Receitas</button></a></td>
+                        <td><a href="index02.html"><button>Exercícios</button></a></td>
+                        <td><a href="index03.html"><button>Bem-estar Mental</button></a></td>
+                        <td><a href="index04.html"><button>Cuidados com a Pele</button></a></td>
                         
 
                     </tr>
