--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/ENiIdxem1T0?si=S3iCiJC0hOHP3eBo" 
                         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    </h2>
+                        </h2>
                 </div>
 
                 <div id="centro">
@@ -65,13 +65,13 @@
                     </tr>
                     <tr>
                         <td><img src="comida.jpg"
-                            width="200" height="200 alt="Texto alternativo" title="imagem"/></td>
-                        <td><img src="volei.jpg"
-                            width="200" height="200 alt="Texto alternativo" title="imagem"/></td>
+                            width="200" height="230 alt="Texto alternativo" title="imagem"/></td>
+                        <td><img src="esteira.jpg"
+                            width="200" height="230 alt="Texto alternativo" title="imagem"/></td>
                         <td> <img src="meditação.jpg"
-                                width="200" height="200 alt="Texto alternativo" title="imagem"/></td>
+                                width="200" height="230 alt="Texto alternativo" title="imagem"/></td>
                         <td><img src="PELE.jpg"
-                                width="200" height="200 alt="Texto alternativo" title="imagem"/></td>
+                                width="200" height="230 alt="Texto alternativo" title="imagem"/></td>
                     </tr>
                     </table>
                     </div>
