--- a/index03.html
+++ b/index03.html
@@ -39,15 +39,8 @@ Portanto, é essencial dedicar atenção tanto à saúde mental quanto à saúde
     </div>
 
     <div id="lado">
-        <td><img src="https://s2.glbimg.com/sYUw-_ztMdpbLyV9lCpms08KRw4=/620x390/top/s.glbimg.com/es/ge/f/original/2014/05/08/152605708.jpg"
-                width="230" height="230 alt=" Texto alternativo" title="imagem" /></td>
-        <td><img src="https://s2.glbimg.com/sYUw-_ztMdpbLyV9lCpms08KRw4=/620x390/top/s.glbimg.com/es/ge/f/original/2014/05/08/152605708.jpg"
-                width="230" height="230 alt=" Texto alternativo" title="imagem" /></td>
-        <br>
-        <td><img src="https://s2.glbimg.com/sYUw-_ztMdpbLyV9lCpms08KRw4=/620x390/top/s.glbimg.com/es/ge/f/original/2014/05/08/152605708.jpg"
-                width="230" height="230 alt=" Texto alternativo" title="imagem" /></td>
-        <td><img src="https://s2.glbimg.com/sYUw-_ztMdpbLyV9lCpms08KRw4=/620x390/top/s.glbimg.com/es/ge/f/original/2014/05/08/152605708.jpg"
-                width="230" height="230 alt=" Texto alternativo" title="imagem" /></td>
+        <td><img src="mental1.jpg"
+                width="400" height="570 alt=" Texto alternativo" title="imagem" /></td>
     </div>
 
 
@@ -63,9 +56,9 @@ Portanto, é essencial dedicar atenção tanto à saúde mental quanto à saúde
 
             </tr>
             <tr>
-                <td><img src="volei.jpg" width="200" height="200 alt=" Texto alternativo" title="imagem" /></td>
-                <td> <img src="meditação.jpg" width="200" height="200 alt=" Texto alternativo" title="imagem" /></td>
-                <td><img src="PELE.jpg" width="200" height="200 alt=" Texto alternativo" title="imagem" /></td>
+                <td><img src="comida.jpg" width="200" height="230 alt=" Texto alternativo" title="imagem" /></td>
+                <td> <img src="esteira.jpg" width="200" height="230 alt=" Texto alternativo" title="imagem" /></td>
+                <td><img src="PELE.jpg" width="200" height="230 alt=" Texto alternativo" title="imagem" /></td>
             </tr>
         </table>
     </div>
