--- a/index02.html
+++ b/index02.html
@@ -22,7 +22,7 @@
 
     <div id="conteudo">
         <h2>Você já pensou em Práticar Exercícios?</h2>
-        <h3>
+        <h4>
             Existem diversos tipos de exercícios físicos, e cada um deles oferece benefícios específicos para a saúde. Desde atividades aeróbicas, como corrida, natação e dança, 
             que melhoram a capacidade cardiovascular, até exercícios de resistência, como musculação e pilates, que fortalecem os músculos e ossos, a variedade de opções permite 
             que cada pessoa encontre uma prática que se adeque às suas preferências e necessidades.
@@ -35,19 +35,21 @@
             Em termos gerais, a importância dos exercícios físicos e práticas esportivas para beneficiar a saúde é incontestável. Além dos benefícios já mencionados, 
             a atividade física contribui para a manutenção do peso corporal saudável, o fortalecimento do sistema imunológico, a redução do risco de doenças crônicas 
             (como diabetes e hipertensão) e o aumento da longevidade.
+            </h4>
     </div>
-
     <div id="lado">
-        <td><img src="https://s2.glbimg.com/sYUw-_ztMdpbLyV9lCpms08KRw4=/620x390/top/s.glbimg.com/es/ge/f/original/2014/05/08/152605708.jpg"
-                width="230" height="230 alt=" Texto alternativo" title="imagem" /></td>
-        <td><img src="https://s2.glbimg.com/sYUw-_ztMdpbLyV9lCpms08KRw4=/620x390/top/s.glbimg.com/es/ge/f/original/2014/05/08/152605708.jpg"
-                width="230" height="230 alt=" Texto alternativo" title="imagem" /></td>
-        <br>
-        <td><img src="https://s2.glbimg.com/sYUw-_ztMdpbLyV9lCpms08KRw4=/620x390/top/s.glbimg.com/es/ge/f/original/2014/05/08/152605708.jpg"
-                width="230" height="230 alt=" Texto alternativo" title="imagem" /></td>
-        <td><img src="https://s2.glbimg.com/sYUw-_ztMdpbLyV9lCpms08KRw4=/620x390/top/s.glbimg.com/es/ge/f/original/2014/05/08/152605708.jpg"
-                width="230" height="230 alt=" Texto alternativo" title="imagem" /></td>
+        <td><img src="exer11.jpg"
+                width="300" height="480 alt=" Texto alternativo" title="imagem" /></td>
+        
     </div>
+    <br>
+            <h2>Veja o vídeo a seguir:</h2>
+            <br>
+    <h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/UUJ55DR-jPk?si=-s_ZX4--Xy4_kbZo" title="YouTube video player" 
+    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </h3>
 
 
 
@@ -62,9 +64,9 @@
 
             </tr>
             <tr>
-                <td><img src="volei.jpg" width="200" height="200 alt=" Texto alternativo" title="imagem" /></td>
-                <td> <img src="meditação.jpg" width="200" height="200 alt=" Texto alternativo" title="imagem" /></td>
-                <td><img src="PELE.jpg" width="200" height="200 alt=" Texto alternativo" title="imagem" /></td>
+                <td><img src="comida.jpg" width="200" height="230 alt=" Texto alternativo" title="imagem" /></td>
+                <td> <img src="meditação.jpg" width="200" height="230 alt=" Texto alternativo" title="imagem" /></td>
+                <td><img src="PELE.jpg" width="200" height="230 alt=" Texto alternativo" title="imagem" /></td>
             </tr>
         </table>
     </div>
