--- a/index04.html
+++ b/index04.html
@@ -22,7 +22,7 @@
 
     <div id="conteudo">
         <h2>Cuidar da Pele vai Muito Além da Èstetica:</h2>
-        <h3>
+        <h4>
             Existem diversos tipos de cuidados com a pele que vão muito além da estética, impactando diretamente a saúde do corpo como um todo. A pele desempenha um papel 
             crucial na proteção do organismo contra agentes externos, na regulação da temperatura corporal e na síntese de vitamina D, tornando essencial a manutenção de sua saúde.
             <br>
@@ -41,19 +41,13 @@
             Por fim, estar atento a quaisquer alterações na pele e buscar orientação médica quando necessário é crucial para identificar precocemente possíveis problemas 
             dermatológicos e garantir a saúde da pele a longo prazo.
             
-        </h3>
+        </h4>
     </div>
 
     <div id="lado">
-        <td><img src="https://s2.glbimg.com/sYUw-_ztMdpbLyV9lCpms08KRw4=/620x390/top/s.glbimg.com/es/ge/f/original/2014/05/08/152605708.jpg"
-                width="230" height="230 alt=" Texto alternativo" title="imagem" /></td>
-        <td><img src="https://s2.glbimg.com/sYUw-_ztMdpbLyV9lCpms08KRw4=/620x390/top/s.glbimg.com/es/ge/f/original/2014/05/08/152605708.jpg"
-                width="230" height="230 alt=" Texto alternativo" title="imagem" /></td>
-        <br>
-        <td><img src="https://s2.glbimg.com/sYUw-_ztMdpbLyV9lCpms08KRw4=/620x390/top/s.glbimg.com/es/ge/f/original/2014/05/08/152605708.jpg"
-                width="230" height="230 alt=" Texto alternativo" title="imagem" /></td>
-        <td><img src="https://s2.glbimg.com/sYUw-_ztMdpbLyV9lCpms08KRw4=/620x390/top/s.glbimg.com/es/ge/f/original/2014/05/08/152605708.jpg"
-                width="230" height="230 alt=" Texto alternativo" title="imagem" /></td>
+        
+        <td><img src="skin2.jpg"
+                width="500" height="660 alt=" Texto alternativo" title="imagem" /></td>
     </div>
 
 
@@ -69,9 +63,9 @@
 
             </tr>
             <tr>
-                <td><img src="volei.jpg" width="200" height="200 alt=" Texto alternativo" title="imagem" /></td>
-                <td> <img src="meditação.jpg" width="200" height="200 alt=" Texto alternativo" title="imagem" /></td>
-                <td><img src="PELE.jpg" width="200" height="200 alt=" Texto alternativo" title="imagem" /></td>
+                <td><img src="comida.jpg" width="200" height="230 alt=" Texto alternativo" title="imagem" /></td>
+                <td> <img src="esteira.jpg" width="200" height="230 alt=" Texto alternativo" title="imagem" /></td>
+                <td><img src="meditação.jpg" width="200" height="230 alt=" Texto alternativo" title="imagem" /></td>
             </tr>
         </table>
     </div>
